--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
       <img src="assets/img/logo.svg" alt="Epicode-logo" />
       <h2>Epicode-il blog dei developers</h2>
 
-      <a href="https://epicode.com/it/"
-        ><h3><ion-icon name="arrow-forward-outline"></ion-icon>Home<ion-icon name="arrow-back-outline"></ion-icon></h3
-      ></a>
-      <a href="https://epicode.com/it/f1000-epicode-financial-times-statista/"
-        ><h3><ion-icon name="arrow-forward-outline"></ion-icon>Articoli<ion-icon name="arrow-back-outline"></ion-icon></h3
-      ></a>
-      <a href="https://epicode.com/it/lavora-con-noi/"
-        ><h3><ion-icon name="arrow-forward-outline"></ion-icon>Lavora con noi<ion-icon name="arrow-back-outline"></ion-icon></h3
-      ></a>
+      <a href="https://epicode.com/it/"><h3>&rAarr;Home&lAarr;</h3></a>
+      <a href="https://epicode.com/it/f1000-epicode-financial-times-statista/"><h3>&rAarr;Articoli&lAarr;</h3></a>
+      <a href="https://epicode.com/it/lavora-con-noi/"><h3>&rAarr;Lavora con noi&lAarr;</h3></a>
     </header>
     <main>
       <div>
